<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UpdateQuote">

    <TextView
        android:id="@+id/enter_quote_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/quote"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/quote_EditText"
        android:layout_width="match_parent"
        android:layout_height="104dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/enter_your_quote_here"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/author_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/author"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/author_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/enter_the_name_of_the_author"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/description"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/description_editText"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/enter_description_here"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="updateQuote"
        android:text="@string/edit" />

</LinearLayout>