<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserLoginActivity">

    <ImageView
        android:id="@+id/imageViewlogin"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/username_textFieldlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:text="@string/username"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/username_editTextFieldlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/enter_username_here"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/invalidUsernameTextlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:text="@string/username_doesnt_exist"
        android:textColor="#E10D0D"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/password_textFieldlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="12dp"
        android:text="@string/password"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/password_editTextlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/showPasswordCheckBoxlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="8dp"
        android:text="@string/show_password" />

    <TextView
        android:id="@+id/invalidPasswordtextlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:text="@string/doesnt_match"
        android:textColor="#C61C1C"
        android:visibility="invisible" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="101dp"
        android:layout_height="38dp"
        android:layout_marginStart="150dp"
        android:text="@string/log_in" />

</LinearLayout>