<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserSignUpActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/username_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:text="Username"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/username_editTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/enter_username_here"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/invalidUsernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:text="@string/invalid_username_please_try_again"
        android:textColor="#E10D0D"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginBottom="8dp"
        android:text="Email"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/enter_your_email_address_here"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/invalidEmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:text="@string/invalid_email_please_try_again"
        android:textColor="#D60707"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/password_textField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="12dp"
        android:text="@string/password"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/password_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/invalidPasswordtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:text="@string/invalid_password_please_try_again"
        android:textColor="#C61C1C"
        android:visibility="invisible" />

    <CheckBox
        android:id="@+id/showPasswordCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="8dp"
        android:text="@string/show_password" />

    <TextView
        android:id="@+id/gender_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:text="@string/gender"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="18sp" />


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_male"
            style="@android:style/Widget.CompoundButton.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Male"
            android:visibility="visible"
            android:onClick="onRadioButtonClick"/>

        <RadioButton
            android:id="@+id/radio_female"
            style="@android:style/Widget.CompoundButton.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female"
            android:visibility="visible"
            android:onClick="onRadioButtonClick"/>

        <RadioButton
            android:id="@+id/radio_others"
            style="@android:style/Widget.CompoundButton.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Others"
            android:visibility="visible"
            android:onClick="onRadioButtonClick"/>
    </RadioGroup>


    <Button
        android:id="@+id/signUpButton"
        android:layout_width="101dp"
        android:layout_height="38dp"
        android:layout_marginStart="150dp"
        android:text="@string/sign_up" />

</LinearLayout>