<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileEditDetailsActivity">

    <TextView
        android:id="@+id/username_textProfileEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:text="Username"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/username_editTextFieldProfileEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/enter_username_here"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/invalidUsernameTextProfileEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:text="@string/invalid_username_please_try_again"
        android:textColor="#E10D0D"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/emailTextViewProfileEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginBottom="8dp"
        android:text="Email"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextTextEmailAddressProfileEdit"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/enter_your_email_address_here"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/invalidEmailTextProfileEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:text="@string/invalid_email_please_try_again"
        android:textColor="#D60707"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/oldpassword_textFieldProfileEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="12dp"
        android:text="Old Password"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/password_editTextProfileEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/oldPasswordInvalid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:text="old password isnt correct"
        android:textColor="#C30808"
        android:visibility="invisible" />

    <CheckBox
        android:id="@+id/showPasswordCheckBoxProfileEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="8dp"
        android:text="@string/show_password" />

    <TextView
        android:id="@+id/newPasswordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:text="New Password"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/newPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:ems="10"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/showNewPasswordCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:text="@string/show_password" />

    <TextView
        android:id="@+id/invalidPasswordProfileEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:text="@string/invalid_password_please_try_again"
        android:textColor="#CC1818"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/gender_textProfileEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:text="@string/gender"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="18sp" />


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_maleEdit"
            style="@android:style/Widget.CompoundButton.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Male"
            android:visibility="visible"
            android:onClick="onRadioButtonClick"/>

        <RadioButton
            android:id="@+id/radio_femaleEdit"
            style="@android:style/Widget.CompoundButton.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female"
            android:visibility="visible"
            android:onClick="onRadioButtonClick"/>

        <RadioButton
            android:id="@+id/radio_othersEdit"
            style="@android:style/Widget.CompoundButton.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Others"
            android:visibility="visible"
            android:onClick="onRadioButtonClick"/>
    </RadioGroup>


    <Button
        android:id="@+id/signUpButtonEditProfile"
        android:layout_width="101dp"
        android:layout_height="38dp"
        android:layout_marginStart="150dp"
        android:text="@string/edit"
        />

</LinearLayout>