<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="9dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/QuoteImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/img_5"/>

        <TextView
            android:id="@+id/Quote"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/quote_text"
            android:textColor="@color/white"
            android:layout_below="@id/QuoteImage"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            android:visibility="visible"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/Author"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Quote"
            android:padding="8dp"
            android:text="@string/author_text"
            android:textColor="@color/white"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            android:visibility="visible"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/Description"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Author"
            android:padding="8dp"
            android:text="@string/description_text"
            android:textColor="@color/white"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            android:visibility="visible"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/userIdentifier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="26dp"
            android:layout_marginTop="7dp"
            android:textSize="20sp" />


    </RelativeLayout>


</androidx.cardview.widget.CardView>
